fixed the double scroll bug

--- a/client/src/assets/style/columnsView.css
+++ b/client/src/assets/style/columnsView.css
@@ -1,10 +1,16 @@
-#columnsView {display: none;}
+#columnsView {
+    display: none;
+    height: 100%;
+}
 
 #columnsView > div.wrapper {
     display: flex;
+    height: 100%;
+
     flex-flow: row nowrap;
     -moz-flex-flow: row nowrap;
     -webkit-flex-flow: row nowrap;
+
     justify-content: space-around;
     -moz-justify-content: space-around;
     -webkit-justify-content: space-around;
@@ -13,10 +19,6 @@
 }
 
 #columnsView > div.wrapper > div.column {
-    height: calc(100vh - 50px);
-    height: -moz-calc(100vh - 50px);
-    height: -webkit-calc(100vh - 50px);
-
     flex-grow: 1;
     -moz-flex-grow: 1;
     -webkit-flex-grow: 1;
@@ -32,9 +34,7 @@
 #columnsView > div.wrapper > div.column.big {max-width: 50%;}
 
 #columnsView > div.wrapper > div.column.small > div.wrapper {
-    height: calc(100vh - 85px);
-    height: -moz-calc(100vh - 85px);
-    height: -webkit-calc(100vh - 85px);
+    height: calc(100% - 36px);
     
     position: relative;
     overflow: auto;
@@ -107,8 +107,6 @@
 
 #columnsView > div.wrapper > div.column.small > div.wrapper > div.printer > div.info {
     width: calc(100% - 20px);
-    width: -moz-calc(100% - 20px);
-    width: -webkit-calc(100% - 20px);
 
     text-align: left;
 }
@@ -141,8 +139,6 @@
 
 #columnsView > div.wrapper > div.column.small > div.wrapper > div.filter > p {
     width: calc(100% - 51px);
-    width: -moz-calc(100% - 51px);
-    width: -webkit-calc(100% - 51px);
 }
 
 #columnsView > div.wrapper > div.column.small > div.wrapper > div.filter > button {
