--- a/client/src/assets/style/main.css
+++ b/client/src/assets/style/main.css
@@ -2,6 +2,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     background-color: #EFEFEF;
+    overflow: hidden;
 }
 
 button, input {
@@ -128,6 +129,8 @@ input {cursor: text;}
 
     position: absolute;
     top: 50px;
+    right: 0;
+    bottom: 0;
     left: 0;
     z-index: -1;
     overflow: hidden;
